Remove environment-dependent system module test